[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Plr.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="Plr" type="RigidBody2D"]
mode = 3
mass = 0.00102041
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 3
contact_monitor = true
script = ExtResource( 3 )
scalar = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="WinTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Plr_body_entered"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
